[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/world/world.gd" type="Script" id=1]
[ext_resource path="res://src/world/entities.gd" type="Script" id=2]
[ext_resource path="res://src/entities/planet/planet.tscn" type="PackedScene" id=4]

[node name="World" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Entities" type="Node" parent="."]
script = ExtResource( 2 )

[node name="BluePlanet" parent="Entities" instance=ExtResource( 4 )]
position = Vector2( 0, 1000 )
options = {
"team": "blue"
}

[node name="RedPlanet" parent="Entities" instance=ExtResource( 4 )]
position = Vector2( 0, -1000 )
options = {
"team": "red"
}

[node name="Spawnpoints" type="Node" parent="."]

[node name="Blue" type="Node" parent="Spawnpoints"]

[node name="Left2" type="Position2D" parent="Spawnpoints/Blue"]
position = Vector2( -410, 850 )

[node name="Left1" type="Position2D" parent="Spawnpoints/Blue"]
position = Vector2( -205, 775 )

[node name="Front" type="Position2D" parent="Spawnpoints/Blue"]
position = Vector2( 0, 700 )

[node name="Right1" type="Position2D" parent="Spawnpoints/Blue"]
position = Vector2( 205, 775 )

[node name="Right2" type="Position2D" parent="Spawnpoints/Blue"]
position = Vector2( 410, 850 )

[node name="Red" type="Node" parent="Spawnpoints"]

[node name="Left2" type="Position2D" parent="Spawnpoints/Red"]
position = Vector2( 410, -850 )

[node name="Left1" type="Position2D" parent="Spawnpoints/Red"]
position = Vector2( 205, -775 )

[node name="Front" type="Position2D" parent="Spawnpoints/Red"]
position = Vector2( 0, -700 )

[node name="Right1" type="Position2D" parent="Spawnpoints/Red"]
position = Vector2( -205, -775 )

[node name="Right2" type="Position2D" parent="Spawnpoints/Red"]
position = Vector2( -410, -850 )
